Se agrega el div Las mas aclamadas con una barra de scroll horizontal

--- a/index.html
+++ b/index.html
@@ -79,17 +79,62 @@
             <div>
                 <img src="./ImagenesDePeliculas/qJ2tW6WMUDux911r6m7haRef0WH.jpg" class=" Peliculas" alt="Batman" />
             </div>
-            <a href=""></a>
-        </div>
-        <div class="d-flex justify-content-center">
-            <a href="" class="text-center  btn btn-primary buttonCambiarPagina"> Anterior
-            </a>
-            <a href="segundaPaginaConPeliculas.html" class="text-center  btn btn-primary buttonCambiarPagina"> Siguiente
-            </a>
-        </div>
+
+
+            <div class="d-flex justify-content-center mt-5 mb-5">
+                <a href="" class="text-center  btn btn-primary buttonCambiarPagina"> Anterior
+                </a>
+                <a href="segundaPaginaConPeliculas.html" class="text-center  btn btn-primary buttonCambiarPagina">
+                    Siguiente
+                </a>
+            </div>
+
+
+
 
         </div>
+        <hr class="LineaHorizontal">
+        <h1 class="text-center mt-5  text-light">Las más aclamadas</h1>
+        <div class="Las-Mas-Aclamadas d-flex justify-content-center">
+
+
+            <div class="containerPeliculas d-flex justify-content-center">
+                <div class="">
+                    <img src="./ImagenesDePeliculas/Open jaime.jpeg" class=" PeliculasSmall " alt="Openheimmer" />
+
+
+                </div>
+
+                <div>
+                    <img src="./ImagenesDePeliculas/The godfather.jpeg" class="  PeliculasSmall" alt="El Padrino" />
+                </div>
+                <div>
+                    <img src="./ImagenesDePeliculas/The simpsons.jpeg" class="PeliculasSmall" alt="Los simpsons" />
+                </div>
+                <div>
+                    <img src="./ImagenesDePeliculas/TumbaDeLasLuciernagas.jpg" class="PeliculasSmall"
+                        alt="La Tumba De Las Luciernagas" />
+                </div>
+                <div>
+                    <img src="./ImagenesDePeliculas/MBross.jpeg" class=" PeliculasSmall" alt="Mario bros" />
+                </div>
+                <div>
+                    <img src="./ImagenesDePeliculas/YourName.jpg" class=" PeliculasSmall" alt="YourName" />
+                </div>
+                <div>
+                    <img src="./ImagenesDePeliculas/rCzpDGLbOoPwLjy3OAm5NUPOTrC.jpg" class="PeliculasSmall"
+                        alt="El señor de los anillos" />
+                </div>
+                <div>
+                    <img src="./ImagenesDePeliculas/qJ2tW6WMUDux911r6m7haRef0WH.jpg" class=" PeliculasSmall"
+                        alt="Batman" />
+                </div>
+
+            </div>
         </div>
+
+
+
 
     </main>
 
