--- a/htmls/formularioDeRegistro.html
+++ b/htmls/formularioDeRegistro.html
@@ -1,16 +1,20 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Registro</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <script src="js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="styles/formularioStyles.css">
 </head>
 
-<body> 
+<body class="bg-dark">
+    <main class="w-90 bg-dark">
+    </main>
+
 
 </body>
-    
 
 </html>
