--- a/htmls/segundaPaginaConPeliculas.html
+++ b/htmls/segundaPaginaConPeliculas.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -9,30 +9,31 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <title>Peliculas</title>
 </head>
 
-<body class="bg-black">
+<body class="bg-dark">
     <!-- ========== Aca va a estar el header Section ========== -->
     <header id="cabeceraLogo" class="position-fixed w-100">
 
         <nav id="menuPrincipal" class="">
-            <i class="fa-solid fa-film logo">Yarkims Cinema</i>
+            <i class="fa-solid fa-film fa-beat logo">Yarkims Cinema</i>
             <ul class="listNav">
                 <li><a class="itemNav fw-bold">Tendencias</a></li>
                 <li><a class="itemNav iniciarSesion  fw-bold">Iniciar sesion</a></li>
-                <li><a class="itemNav  fw-bold"> Registrarse</a></li>
+                <li><a href="htmls/formularioDeRegistro.html" class="itemNav  fw-bold"> Registrarse</a></li>
             </ul>
         </nav>
     </header>
-    <main>
+    <main class="">
         <div id="PantallaPrincipal" class="bg-dark text-light text-center">
             <H1 class=" mb-5  TItuloPrincipal  ">Películas y series ilimitadas <br>
                 en un solo lugar</H1>
             <h2 class="fs-1"> Disfruta donde quieras. </h2>
             <h2 class="fs-1">Cancela en cualquier momento</h2>
             <!--<button type="button" class="btn registerButton">Registrarse</button> -->
-            <a href="formularioDeRegistro.html" class="btn registerButton fw-bold">Registrate</a>
+            <a href="htmls/formularioDeRegistro.html" class="btn registerButton fw-bold">Registrate</a>
         </div>
 
         <!-- ========== Aca va a estar el "buscador de peliculas" ========== -->
@@ -47,7 +48,7 @@
         </div>
 
         <!-- ========== Aca va a estar la lista de peliculas recomendadas d-flex  flex-wrap align-content-center ========== -->
-        <div class=" PeliculasRecomendadas bg-dark d-flex flex-wrap  justify-content-center ">
+        <div class=" peliculasRecomendadas bg-dark d-flex flex-wrap  justify-content-center ">
             <div class="">
                 <img src="./ImagenesDePeliculas/Open jaime.jpeg" class=" Peliculas " alt="Openheimmer" />
                 <p class="text-light textoAbsoluto text-center">Openheimmer</p>
@@ -79,15 +80,68 @@
                 <img src="./ImagenesDePeliculas/qJ2tW6WMUDux911r6m7haRef0WH.jpg" class=" Peliculas" alt="Batman" />
             </div>
 
-            <a href=""></a>
+        </div>
+        <div class="d-flex justify-content-center mt-5 mb-5 bg-dark">
+            <a href="../index.html" class="text-center  btn btn-primary buttonCambiarPagina"> Anterior
+            </a>
+            <a href="../segundaPaginaConPeliculas.html" class="text-center  btn btn-primary buttonCambiarPagina">
+                Siguiente
+            </a>
+        </div>
+        <hr class="LineaHorizontal">
+        <h1 class="text-center mt-5  text-light">Las más aclamadas</h1>
+        <div class="Las-Mas-Aclamadas d-flex justify-content-center">
+
+
+            <div class="containerPeliculas d-flex justify-content-center">
+                <div class="">
+                    <img src="./ImagenesDePeliculas/Open jaime.jpeg" class=" PeliculasSmall " alt="Openheimmer" />
+
+
+                </div>
+
+                <div>
+                    <img src="./ImagenesDePeliculas/The godfather.jpeg" class="  PeliculasSmall" alt="El Padrino" />
+                </div>
+                <div>
+                    <img src="./ImagenesDePeliculas/The simpsons.jpeg" class="PeliculasSmall" alt="Los simpsons" />
+                </div>
+                <div>
+                    <img src="./ImagenesDePeliculas/TumbaDeLasLuciernagas.jpg" class="PeliculasSmall"
+                        alt="La Tumba De Las Luciernagas" />
+                </div>
+                <div>
+                    <img src="./ImagenesDePeliculas/MBross.jpeg" class=" PeliculasSmall" alt="Mario bros" />
+                </div>
+                <div>
+                    <img src="./ImagenesDePeliculas/YourName.jpg" class=" PeliculasSmall" alt="YourName" />
+                </div>
+                <div>
+                    <img src="./ImagenesDePeliculas/rCzpDGLbOoPwLjy3OAm5NUPOTrC.jpg" class="PeliculasSmall"
+                        alt="El señor de los anillos" />
+                </div>
+                <div>
+                    <img src="./ImagenesDePeliculas/qJ2tW6WMUDux911r6m7haRef0WH.jpg" class=" PeliculasSmall"
+                        alt="Batman" />
+                </div>
+
+            </div>
         </div>
 
+        <div class="d-flex justify-content-center position-fixed bg-light">
+
         </div>
-        </div>
+
 
     </main>
-
-    <footer></footer>
+    <footer class="d-flex justify-content-center ">
+        <ul class="listFooter d-flex justify-content-evenly align-items-center">
+            <li><a href="" class="itemFooter fw-bold">Terminos y Condiciones</a></li>
+            <li><a href="" class="itemFooter fw-bold">Preguntas Frecuentes</a></li>
+            <li><a href="" class="itemFooter fw-bold">Ayuda</a></li>
+            <li><a href="" class="itemFooter  fw-bold">Administrador de peliculas</a></li>
+        </ul>
+    </footer>
 
 </body>
 
