--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
+    <script src="js/"></script>
     <script src="js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
@@ -21,8 +22,10 @@
             <i class="fa-solid fa-film fa-beat logo">Yarkims Cinema</i>
             <ul class="listNav">
                 <li><a class="itemNav fw-bold">Tendencias</a></li>
-                <li><a class="itemNav iniciarSesion  fw-bold">Iniciar sesion</a></li>
+                <li><a href="/htmls/iniciarSesion.html" class="itemNav buttonEspecial  fw-bold">Iniciar sesion</a></li>
                 <li><a href="htmls\formularioDeRegistro.html" class="itemNav  fw-bold"> Registrarse</a></li>
+                <li><a href="/htmls/listaDePeliculasApi.html" class="itemNav  fw-bold buttonEspecial"> Conexión API</a>
+                </li>
             </ul>
         </nav>
     </header>
@@ -52,40 +55,47 @@
         <div class=" peliculasRecomendadas bg-dark d-flex flex-wrap  justify-content-center ">
             <div class="">
                 <img src="./ImagenesDePeliculas/Open jaime.jpeg" class=" Peliculas " alt="Openheimmer" />
-                <p class="text-light textoAbsoluto text-center">Openheimmer</p>
+                <p class="text-light textoAbsoluto text-center fw-bold">Openheimmer</p>
 
             </div>
 
             <div>
                 <img src="./ImagenesDePeliculas/The godfather.jpeg" class="  Peliculas" alt="El Padrino" />
+                <p class="text-light textoAbsoluto text-center fw-bold">El Padrino</p>
             </div>
             <div>
                 <img src="./ImagenesDePeliculas/The simpsons.jpeg" class="Peliculas" alt="Los simpsons" />
+                <p class="text-light textoAbsoluto text-center fw-bold">Los simpsons</p>
             </div>
             <div>
                 <img src="./ImagenesDePeliculas/TumbaDeLasLuciernagas.jpg" class="Peliculas"
                     alt="La Tumba De Las Luciernagas" />
+                <p class="text-light textoAbsoluto text-center fw-bold">La Tumba De Las Luciernagas</p>
             </div>
             <div>
-                <img src="./ImagenesDePeliculas/MBross.jpeg" class=" Peliculas" alt="Mario bros" />
+                <img src="./ImagenesDePeliculas/MBross.jpeg" class=" Peliculas" alt="Mario Bross" />
+                <p class="text-light textoAbsoluto text-center fw-bold">Mario Bros</p>
             </div>
             <div>
                 <img src="./ImagenesDePeliculas/YourName.jpg" class=" Peliculas" alt="YourName" />
+                <p class="text-light textoAbsoluto text-center fw-bold">Your Name</p>
             </div>
             <div>
                 <img src="./ImagenesDePeliculas/rCzpDGLbOoPwLjy3OAm5NUPOTrC.jpg" class="Peliculas"
                     alt="El señor de los anillos" />
+                <p class="text-light textoAbsoluto text-center fw-bold">El señor de los anillos</p>
             </div>
 
             <div>
                 <img src="./ImagenesDePeliculas/qJ2tW6WMUDux911r6m7haRef0WH.jpg" class=" Peliculas" alt="Batman" />
+                <p class="text-light textoAbsoluto text-center fw-bold">Batman</p>
             </div>
 
         </div>
         <div class="d-flex justify-content-center mt-5 mb-5 bg-dark">
             <a href="" class="text-center  btn btn-primary buttonCambiarPagina"> Anterior
             </a>
-            <a href="htmls\segundaPaginaConPeliculas.html" class="text-center  btn btn-primary buttonCambiarPagina">
+            <a href="" class=" text-center btn btn-primary buttonCambiarPagina">
                 Siguiente
             </a>
         </div>
